tests/error/private.gw
// [contains] can't access private
class C { private int i;  }

C c;
<<<c.i>>>;
